style: fix map-has-key to check for palette contrast

--- a/packages/core/sass/theme/_palette.scss
+++ b/packages/core/sass/theme/_palette.scss
@@ -97,7 +97,7 @@
 
       &#{$prefix}-color--contrast {
         color: if(
-          index($palette-contrast, $label) != null,
+          map-has-key($palette-contrast, $label),
           map-get($palette-contrast, $label),
           contrast($color)
         );
